--- a/assets/sass/base/_page.scss
+++ b/assets/sass/base/_page.scss
@@ -31,6 +31,8 @@
 	body {
 		background: _palette(bg);
 		overflow-y:hidden;
+		overflow-x:hidden;
+		overflow:hidden;
 
 		// Stops initial animations until page loads.
 			&.is-preload {
